v0.2.0:
-----
- Added config file for each weather type's chance per season.

v0.1.0:
-----
- Initial release for purposes of generating GitHub keys. Demonstrates rudimentary fixing of weather to a certain day of the week.