@@ -1,8 +1,8 @@
-- (50% Done) Implement custom probabilities for each state [Still need to implement the actual weather changes]
 - (medium) Implement dynamic probabilities based on day of season
-- (low) Change priority of probabilities for each season
+- (low) Change priority of probabilities for each season ------> TARGET: v1.0.0
 - (low) Implement templates for different biomes
 - (low) Implement template probability profiles over season length
+- (DONE) Implement custom probabilities for each state
 - (DONE) Implement config.json for each season
 - (DONE) Test ability to influence weather tomorrow
 	- Sunny
