@@ -1,7 +1,7 @@
 ﻿{
   "Name": "ImmersiveWeathers - ClimateControl",
   "Author": "MsBontle",
-  "Version": "0.1.0",
+  "Version": "0.2.0",
   "Description": "Allows for custom control of the game's climate in each season and week.",
   "UniqueID": "MsBontle.ClimateControl",
   "EntryDll": "IW-ClimateControl.dll",
@@ -10,7 +10,7 @@
   "Dependencies": [
     {
       "UniqueID": "MsBontle.ImmersiveWeathers",
-      "MinimumVersion": "0.3.1"
+      "MinimumVersion": "0.4.0"
     }
   ]
 }
